--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: "Cloud Course Blog"
-author: "Alejandra Talamantes Ramirez"
-description: "Made with <b style=\"color: #f45;\">&lt;3</b>"
+title: "Anas Blog"
+author: "Anas"
+description: "Enjoy :) <b style=\"color: #f45;\">&lt;3</b>"
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
@@ -20,8 +20,8 @@ navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "README.md"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
-  - {title: Mail, icon: envelope, url: "mailto:alejandratr@hotmail.com"}
-  - {title: Github, icon: github, url: "https://github.com/Alejandratala"}
+  - {title: Mail, icon: envelope, url: "mailto:domaanee@hotmail.com"}
+  - {title: Github, icon: github, url: "https://github.com/itsanass"}
   #- {title: Subscribe, icon: rss, url: "/feed.xml"}
 
 comments:
